--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+   	<meta charset="UTF-8">
 	<title>Test</title>
 </head>
 <body>
-	<h1>Testing sresting</h1>
+	<h1>Test</h1>
+	<h2>Paweł Żochowski</h2>
 </body>
 </html>
