--- a/index.html
+++ b/index.html
@@ -30,22 +30,22 @@
 	   	<div class="buttons-wrapper">
 		   	<a href="https://github.com/WinDej">
 				<div class="git">
-					<i class="icon-github-squared"></i>
+					<i class="icon-github"></i>
 		  		</div>
 			</a>
 			<a href="https://twitter.com/p_zochowski">
 				<div class="twitter">
-					<i class="icon-twitter-squared"></i>
+					<i class="icon-twitter"></i>
 				</div>
 			</a>
 			<a href="http://steamcommunity.com/id/windej/">
 				<div class="steam">
-				   	<i class="icon-steam-squared"></i>
+				   	<i class="icon-steam"></i>
 				</div>
 			</a>
 			<a href="https://plus.google.com/117921290462440023446">
 				<div class="gplus">
-				 	<i class="icon-gplus-squared"></i>
+				 	<i class="icon-gplus"></i>
 				</div>
 			</a>
 	   	</div>	
