--- a/index.html
+++ b/index.html
@@ -1,62 +1,20 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="UTF-8">
-    <title>WinDej</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="css/fontello.css">
-    <link href='https://fonts.googleapis.com/css?family=Poiret+One&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-    <script src="scripts/jquery-3.0.0.min.js" type="text/javascript"></script>
-    <script src="scripts/git.js" type="text/javascript"></script>
-    <script type="text/javascript">
-        $(function() {
-            $("#my-github-projects").loadRepositories("WinDej");
-        });
-    </script>
-</head>
-
-<body>
-    <header>
-        <div class="header-wrapper">
-            <div class="header-wrapper-logo">
-                <div class="first">WinDej</div>
-                <div class="second">Paweł Żochowski</div>
-            </div>
-        </div>
-    </header>
-    <main>
-        <h1>Repositories</h1>
-        <div class="labels">
-            <div class="name">Name</div>
-            <div class="language">Lang</div>
-            <div class="description">Description</div>
-            <div class="update">Updated</div>
-            <div class="cls"></div>
-        </div>
-        <div id="my-github-projects"></div>
-
-
-    </main>
-    <div class="buttons">
-        <div class="buttons-wrapper">
-            <a href="https://github.com/WinDej">
-                <div class="git">
-                    <i class="icon-github"></i>
-                </div>
-            </a>
-            <a href="https://twitter.com/p_zochowski">
-                <div class="twitter">
-                    <i class="icon-twitter"></i>
-                </div>
-            </a>
-            <div class="cls"></div>
-        </div>
-    </div>
-    <footer>
-        &copy; WinDej@github.com
-    </footer>
-
-</body>
-
+	<head>
+        <meta charset="utf-8" />
+		<title>Template</title>
+		<link rel="stylesheet" type="text/css" href="style/main.css" />
+		<link href="https://fonts.googleapis.com/css?family=Ubuntu:400,700&amp;subset=latin-ext" rel="stylesheet">
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+	</head>
+	<body>
+	    <div class="container">
+			<div class="name">
+				Paweł Żochowski
+			</div> 
+			<a href="https://github.com/WinDej"><i class="fab fa-github"></i></a>  
+			<a href="https://www.linkedin.com/in/paweł-żochowski-32a7bb153"><i class="fab fa-linkedin-in"></i></a>
+	    </div>
+		
+	</body>
 </html>
