Changed icon location

--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 			<div class="name">
 				Paweł Żochowski
 			</div> 
-			<a href="https://github.com/WinDej"><i class="fab fa-github"></i></a>  
-			<a href="https://www.linkedin.com/in/paweł-żochowski-32a7bb153"><i class="fab fa-linkedin-in"></i></a>
+			<div class="buttons">
+				<a href="https://github.com/WinDej"><i class="fab fa-github"></i></a>  
+				<a href="https://www.linkedin.com/in/paweł-żochowski-32a7bb153"><i class="fab fa-linkedin-in"></i></a>
+			</div>
 	    </div>
 		
 	</body>
